colors and fonts

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>JBN</title>
-        <meta name="Jugendbeirat Neustandt" content="">
+        <meta name="Jugendbeirat Neustadt" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <p class="par">
-            Test paragraph.
-        </p>
+        <h1>
+            Jugendbeirat Neustadt
+        </h1>
     </body>
 </html>
