--- a/index.html
+++ b/index.html
@@ -9,9 +9,22 @@
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
     </head>
+    <header>
+        <div id="navbar" class="navbar">
+            <a class="active" href="#home">Home</a>
+            <a href="mitmachen">Mitmachen</a>
+            <a href="kontakt">Kontakt</a>
+        </div>
+
+    </header>
     <body>
-        <h1>
+    <div id="container">
+        <div id="makepicdarker" class="makepicdarker"></div>
+        <div id="titelheader" class="titelheader">
+            <h1 class="Titel">
             Jugendbeirat Neustadt
-        </h1>
+            </h1>
+        </div>
+    </div>
     </body>
 </html>
