--- a/mitmachen.html
+++ b/mitmachen.html
@@ -11,24 +11,17 @@
     </head>
     <header>
         <div id="navbar" class="navbar">
-            <a class="active" href="#home">Home</a>
-            <a href="mitmachen.html">Mitmachen</a>
+            <a href="index.html">Home</a>
+            <a class="active" href="mitmachen">Mitmachen</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
 
     </header>
     <body>
-    <div id="container">
-        <div id="makepicdarker" class="makepicdarker"></div>
-        <div id="titelheader" class="titelheader">
-            <div id="rect" class="rect"></div>
+        <div id="titelheaderjoin" class="titelheaderjoin">
             <h1 class="Titel">
-            Jugendbeirat Neustadt
+            Mitmachen
             </h1>
-            <h2 class="subtitel">
-            junge Menschen machen Politik
-            </h2>
         </div>
-    </div>
     </body>
 </html>
