--- a/kontakt.html
+++ b/kontakt.html
@@ -11,24 +11,17 @@
     </head>
     <header>
         <div id="navbar" class="navbar">
-            <a class="active" href="#home">Home</a>
+            <a href="index.html">Home</a>
             <a href="mitmachen.html">Mitmachen</a>
-            <a href="kontakt.html">Kontakt</a>
+            <a class="active" href="kontakt.html">Kontakt</a>
         </div>
 
     </header>
     <body>
-    <div id="container">
-        <div id="makepicdarker" class="makepicdarker"></div>
-        <div id="titelheader" class="titelheader">
-            <div id="rect" class="rect"></div>
-            <h1 class="Titel">
-            Jugendbeirat Neustadt
-            </h1>
-            <h2 class="subtitel">
-            junge Menschen machen Politik
-            </h2>
+        <div id="titelheaderContact" class="titelheaderContact"></div>
+
+        <div id="whitebackdrop" class="whitebackdrop">
+            <svg class="shapetest" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,224L80,208C160,192,320,160,480,160C640,160,800,192,960,176C1120,160,1280,96,1360,64L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
         </div>
-    </div>
     </body>
 </html>
