--- a/kontakt.html
+++ b/kontakt.html
@@ -21,7 +21,16 @@
         <div id="titelheaderContact" class="titelheaderContact"></div>
 
         <div id="whitebackdrop" class="whitebackdrop">
-            <svg class="shapetest" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0099ff" fill-opacity="1" d="M0,224L80,208C160,192,320,160,480,160C640,160,800,192,960,176C1120,160,1280,96,1360,64L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
+            <svg class="shapetest" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,224L80,208C160,192,320,160,480,160C640,160,800,192,960,176C1120,160,1280,96,1360,64L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
         </div>
+        <div id="whitrect" class="whitrect">
+        <div id="discordicon" class="discordicon"></div>
+        <p class="contactlinks">discord.gg/UVQdK45</p>
+        <div id="instagramicon" class="instagramicons"></div>
+        <p class="contactlinks">Jugendbeirat_Neustadt</p>
+        <div id="emailicon" class="emailicon"></div>
+        <p class="contactlinks">jugendinitiative.bremen@gmx.de</p>
+        </div>
+            
     </body>
 </html>
