--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             junge Menschen machen Politik
             </h2>
         </div>
+        <div id="discord_join_btn" class="discord_join_btn">
+            
+        </div>
     </div>
     </body>
 </html>
