how tf does this work

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <header>
         <div id="navbar" class="navbar">
@@ -18,19 +19,15 @@
 
     </header>
     <body>
+    <div id="discord_join_btn" class="discord_join_btn">
+        <h2 class="btn-click-text">Discord beitreten</h2>
+    </div>
     <div id="container">
         <div id="makepicdarker" class="makepicdarker"></div>
         <div id="titelheader" class="titelheader">
             <div id="rect" class="rect"></div>
-            <h1 class="Titel">
-            Jugendbeirat Neustadt
-            </h1>
-            <h2 class="subtitel">
-            junge Menschen machen Politik
-            </h2>
-        </div>
-        <div id="discord_join_btn" class="discord_join_btn">
-            
+            <h1 class="Titel">Jugendbeirat Neustadt</h1>
+            <h2 class="subtitel">junge Menschen machen Politik</h2>
         </div>
     </div>
     </body>
