big fixes updates

--- a/index.html
+++ b/index.html
@@ -16,20 +16,29 @@
             <a href="mitmachen.html">Mitmachen</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-
     </header>
     <body>
-    <div id="discord_join_btn" class="discord_join_btn">
-    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="516" height="137" viewBox="0 0 516 137"><defs><style>.a{fill:#fff;}.b{fill:#f0efff;}.c{filter:url(#a);}</style><filter id="a" x="0" y="0" width="516" height="137" filterUnits="userSpaceOnUse"><feOffset input="SourceAlpha"/><feGaussianBlur stdDeviation="10" result="b"/><feFlood flood-color="#fff" flood-opacity="0.31"/><feComposite operator="in" in2="b"/><feComposite in="SourceGraphic"/></filter></defs><g transform="translate(30 30)"><g class="c" transform="matrix(1, 0, 0, 1, -30, -30)"><rect class="a" width="456" height="77" rx="38.5" transform="translate(30 30)"/></g><path class="b" d="M0,53.206A68.809,68.809,0,0,1,31.82,15.288c55.133-31.244,161.273-6.708,226.7,4.335a197.78,197.78,0,0,1,28.7,7.171A38.318,38.318,0,0,1,250.8,53.206Z" transform="translate(167.416 23.591)"/></g></svg>
-        <h2 class="btn-click-text">Discord beitreten</h2>
-    </div>
+            <button class="discord_join_btn" type="button">
+                Discord beitreten
+            </button>
+
     <div id="container">
-        <div id="makepicdarker" class="makepicdarker"></div>
+        <div class="picture"><div id="neustadtpic" class="neustadtpic"></div></div>
         <div id="titelheader" class="titelheader">
             <div id="rect" class="rect"></div>
             <h1 class="Titel">Jugendbeirat Neustadt</h1>
-            <h2 class="subtitel">junge Menschen machen Politik</h2>
+            <h2 class="subtitel">Wir machen Politik - und du kannst das auch!</h2>
         </div>
+    </div>
+
+
+    <div id="index_wave" >
+        <svg class="index_wave" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+            <path fill="#ffffff" fill-opacity="1" d="M0,256L120,245.3C240,235,480,213,720,197.3C960,181,1200,171,1320,165.3L1440,160L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z" style="--darkreader-inline-fill:#2d3031;" data-darkreader-inline-fill=""></path>
+          </svg>
+    </div>
+    <div id="index_rectangle" class="index_rectangle">
+
     </div>
     </body>
 </html>
