--- a/mitmachen.html
+++ b/mitmachen.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-
+<html>
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,7 +15,11 @@
             <a class="active" href="mitmachen">Mitmachen</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
-
+        <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+        </div>
     </header>
     <body>
         <div id="titelheaderjoin" class="titelheaderjoin">
