--- a/home.html
+++ b/home.html
@@ -24,13 +24,9 @@
             <div class="bar3"></div>
         </div>
     </header>
-
     <body>
 
-       
-
-
-        <button class="discord_join_btn" type="button">
+        <button class="discord_join_btn" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
             Discord beitreten
         </button>
 
