--- a/kontakt.html
+++ b/kontakt.html
@@ -8,6 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <header>
         <div id="navbar" class="navbar">
