--- a/mitmachen.html
+++ b/mitmachen.html
@@ -8,11 +8,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <script src="script.js"></script>
     </head>
     <header>
         <div id="navbar" class="navbar">
             <a href="home.html">Home</a>
-            <a class="active" href="mitmachen">Mitmachen</a>
+            <a class="active" href="#mitmachen">Mitmachen</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
         <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();">
