--- a/home.html
+++ b/home.html
@@ -72,16 +72,31 @@
 
         <div id="page3" class="home_page3">
             <h2 class="Topic_header">Was wir wollen</h2>
-            <p class="Topic_text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>   
+            <p class="Topic_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>   
     </div>
+
+    <div id="scroll_arrow_home_3" class="scroll_arrow_home_3"> 
+        <a href="#page4">
+            <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down3" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
+        </a>
+    </div>
+
+
+    <div id="page4_icon" class="home_page4_icon"></div>
+
+    <div id="page4" class="home_page4">
+        <h2 class="Topic_header">Mach mit</h2>
+        <p class="Topic_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>
+
+    </div>
+
+
+
     </body>
 
     <footer>
-
         <div id="footer_box" class="footer_box">
             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#444053" fill-opacity="1" d="M0,288L80,272C160,256,320,224,480,213.3C640,203,800,213,960,208C1120,203,1280,181,1360,170.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-        
-        <div class="dark_footer"></div>
         </div>
     </footer>
 </html>
