--- a/site/impressum.html
+++ b/site/impressum.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN</title>
+        <title>Impressum | JBN</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
@@ -19,14 +19,17 @@
         </div>
     </header>
 
-
 </header>
-<div  class="Impressum_Titel">
-<h1 class="Titel">Impressum</h1>
-</div>
+
+
+
 <body>
+    <div  class="Impressum_Titel">
+        <h1 class="Titel">Impressum</h1>
+        </div>
 
     <div class="Impressum_text"> 
+
 <p class="Topic_text">
     Hallo, ich bin ein Impressum.<br>
     Das hier ist, rechtlich gesehen, wichtig.<br>
