--- a/site/home.html
+++ b/site/home.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>JBN</title>
         <meta name="Jugendbeirat Neustadt" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
         <script src="script.js"></script>
@@ -24,10 +24,11 @@
             <div class="bar3"></div>
         </div>
     </header>
+
+    
     <body>
 
-
-
+<!--- Page 1 -->
         <div class="picture">
             <div id="neustadtpic" class="neustadtpic"></div>
         </div>
@@ -39,70 +40,70 @@
                 Discord beitreten
             </button>
         </div>
+<!--------------------------->
 
+<!-- Weiße Fläche -->
+        <div id="index_rectangle" class="index_rectangle"><svg xmlns="http://www.w3.org/2000/svg" width="1920" height="3392.787" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
+
+<!--- arrow-->
     <div id="scroll_arrow_home_1" class="scroll_arrow_home_1"> 
         <a href="#page2">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down2" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
     </div>
+<!--------------------------->
 
-
-    <div id="index_rectangle" class="index_rectangle">
-        <svg xmlns="http://www.w3.org/2000/svg" width="1920" height="3392.787" viewbox="0 0 1920 3392.787">
-            <path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/>
-          </svg>
-    </div>
-
-
-    <div id="page2_icon" class="home_page2_icon"></div>
-
+<!--- Page 2-->
         <div id="page2" class="home_page2">
+            <span id="page2_icon" class="home_page2_icon icon"></span>
             <h2 class="Topic_header">Wer wir sind</h2>
-            <p class="Topic_text"> Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>   
+            <p class="Topic_text">Junge Menschen, die in der Neustadt leben und sich für die Lokalpolitik einsetzen, so dass wir die Neustadt zu einem schöneren Ort machen können.</p>   
     
     </div>
+<!--------------------------->
 
+<!--- arrow -->
   <div id="scroll_arrow_home_2" class="scroll_arrow_home_2"> 
         <a href="#page3">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down3" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
     </div>
+<!--------------------------->
 
-    <div id="page3_icon" class="home_page3_icon"></div>
-
+<!--- Page 3-->
         <div id="page3" class="home_page3">
+            <span id="page3_icon" class="home_page3_icon icon"></span>
             <h2 class="Topic_header">Was wir wollen</h2>
-            <p class="Topic_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>   
+            <p class="Topic_text">Jungen Menschen in der Neustadt ein größeres Mitspracherecht in der Lokalpolitik geben und so mehr Demokratie bewirken.</p>   
     </div>
+<!--------------------------->
 
+<!--- Arrow -->
     <div id="scroll_arrow_home_3" class="scroll_arrow_home_3"> 
         <a href="#page4">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down1" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
     </div>
+<!--------------------------->
 
-
-    <div id="page4_icon" class="home_page4_icon"></div>
-
+<!--- Page 4 -->
     <div id="page4" class="home_page4">
+        <span id="page4_icon" class="home_page4_icon icon"></span>
         <h2 class="Topic_header">Mach mit</h2>
-        <p class="Topic_text">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum</p>
+        <p class="Topic_text">Als Jugendbeirat bestehen wir aus jungen Menschen wie dich! Also, wenn du auch Lust dazu hast, die Neustadt zu verändern und bei der Lokalpolitik mitzuwirken, dann mach mit!</p>
     </div>
+<!--------------------------->
 
-</body>
-
-    <footer class="footer">
-
+    <footer>
+        <span id="footer_box" class="footer_box">
         <div class="footer_text">
             <a class="footer_links" href="home.html">Home</a>
             <a class="footer_links" href="datenschutz.html">Datenschutz</a>
             <a class="footer_links" href="impressum.html">Impressum</a>
         </div>
-
-        <div class="footer_box_container">
-            <div id="footer_box" class="footer_box"><svg xmlns="http://www.w3.org/2000/svg" width="cover" height="288" viewbox="0 0 1920 288"><path id="footerbox" d="M5900,4289.762s-340.72,25.033-680.316,54.777c-320.347,28.058-461.922,51.848-771.843,56.524S3980,4363.243,3980,4363.243l-.016,214.456L5900,4578.08Z" transform="translate(-3979.984 -4289.762)" fill="#444053"/></svg>
-            </div>
-        </div>
+        <svg class="footer_box_svg" xmlns="http://www.w3.org/2000/svg" width="cover" height="288" viewbox="0 0 1920 288"><path id="footerbox" d="M5900,4289.762s-340.72,25.033-680.316,54.777c-320.347,28.058-461.922,51.848-771.843,56.524S3980,4363.243,3980,4363.243l-.016,214.456L5900,4578.08Z" transform="translate(-3979.984 -4289.762)" fill="#444053"/></svg></span>
+<!--------------------------->
     </footer>
 
+</body>
 </html>
