--- a/site/home.html
+++ b/site/home.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN</title>
+        <title>JBN [Under construction]</title>
         <meta name="Jugendbeirat Neustadt" content="">
       <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
@@ -33,12 +33,17 @@
             <div id="neustadtpic" class="neustadtpic"></div>
         </div>
         <div id="titelheader" class="titelheader">
-            <div id="rect" class="rect"></div>
+
             <h1 class="Titel">Jugendbeirat Neustadt</h1>
+
+            <div id="rect" class="rect"></div>
+
             <h2 class="subtitel">Wir machen Politik - und du kannst das auch!</h2>
+
             <button class="discord_join_btn" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
                 Discord beitreten
             </button>
+
         </div>
 <!--------------------------->
 
@@ -46,15 +51,19 @@
         <div id="index_rectangle" class="index_rectangle"><svg xmlns="http://www.w3.org/2000/svg" width="1920" height="3392.787" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
 
 <!--- arrow-->
-    <div id="scroll_arrow_home_1" class="scroll_arrow_home_1"> 
+    <div id="scroll_arrow_home_1" class="scroll_arrow_home_1 arrow"> 
         <a href="#page2">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down2" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
     </div>
 <!--------------------------->
 
+<!--- Pages section -->
+
+<section id="pages_section">
+
 <!--- Page 2-->
-        <div id="page2" class="home_page2">
+        <div id="page2" class="home_page2 page">
             <span id="page2_icon" class="home_page2_icon icon"></span>
             <h2 class="Topic_header">Wer wir sind</h2>
             <p class="Topic_text">Junge Menschen, die in der Neustadt leben und sich für die Lokalpolitik einsetzen, so dass wir die Neustadt zu einem schöneren Ort machen können.</p>   
@@ -63,7 +72,7 @@
 <!--------------------------->
 
 <!--- arrow -->
-  <div id="scroll_arrow_home_2" class="scroll_arrow_home_2"> 
+  <div id="scroll_arrow_home_2" class="scroll_arrow_home_2 arrow"> 
         <a href="#page3">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down3" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
@@ -71,7 +80,7 @@
 <!--------------------------->
 
 <!--- Page 3-->
-        <div id="page3" class="home_page3">
+        <div id="page3" class="home_page3 page">
             <span id="page3_icon" class="home_page3_icon icon"></span>
             <h2 class="Topic_header">Was wir wollen</h2>
             <p class="Topic_text">Jungen Menschen in der Neustadt ein größeres Mitspracherecht in der Lokalpolitik geben und so mehr Demokratie bewirken.</p>   
@@ -79,7 +88,7 @@
 <!--------------------------->
 
 <!--- Arrow -->
-    <div id="scroll_arrow_home_3" class="scroll_arrow_home_3"> 
+    <div id="scroll_arrow_home_3" class="scroll_arrow_home_3 arrow"> 
         <a href="#page4">
             <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down1" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
         </a>
@@ -87,13 +96,16 @@
 <!--------------------------->
 
 <!--- Page 4 -->
-    <div id="page4" class="home_page4">
+    <div id="page4" class="home_page4 page">
         <span id="page4_icon" class="home_page4_icon icon"></span>
         <h2 class="Topic_header">Mach mit</h2>
         <p class="Topic_text">Als Jugendbeirat bestehen wir aus jungen Menschen wie dich! Also, wenn du auch Lust dazu hast, die Neustadt zu verändern und bei der Lokalpolitik mitzuwirken, dann mach mit!</p>
     </div>
 <!--------------------------->
 
+</section>
+
+<!--------------------------->
     <footer>
         <span id="footer_box" class="footer_box">
         <div class="footer_text">
