--- a/site/home.html
+++ b/site/home.html
@@ -66,7 +66,7 @@
         <div id="page2" class="home_page2 page">
             <span id="page2_icon" class="home_page2_icon icon"></span>
             <h2 class="Topic_header">Wer wir sind</h2>
-            <p class="Topic_text">Junge Menschen, die in der Neustadt leben und sich für die Lokalpolitik einsetzen, so dass wir die Neustadt zu einem schöneren Ort machen können.</p>   
+            <p class="Topic_text">Junge Menschen aus der Neustadt und Umzu, die sich für Lokalpolitik interessieren.</p>   
     
     </div>
 <!--------------------------->
@@ -83,7 +83,7 @@
         <div id="page3" class="home_page3 page">
             <span id="page3_icon" class="home_page3_icon icon"></span>
             <h2 class="Topic_header">Was wir wollen</h2>
-            <p class="Topic_text">Jungen Menschen in der Neustadt ein größeres Mitspracherecht in der Lokalpolitik geben und so mehr Demokratie bewirken.</p>   
+            <p class="Topic_text">Wir wollen eine Möglichkeit zum Mitreden und Einluss darauf nehmen, was in der Neustadt passiert!  </p>   
     </div>
 <!--------------------------->
 
@@ -99,7 +99,7 @@
     <div id="page4" class="home_page4 page">
         <span id="page4_icon" class="home_page4_icon icon"></span>
         <h2 class="Topic_header">Mach mit</h2>
-        <p class="Topic_text">Als Jugendbeirat bestehen wir aus jungen Menschen wie dich! Also, wenn du auch Lust dazu hast, die Neustadt zu verändern und bei der Lokalpolitik mitzuwirken, dann mach mit!</p>
+        <p class="Topic_text">Du bist unter 25 und hast Interesse an Lokalpolitik? Dann mach mit und verbessere die Neustadt!</p>
     </div>
 <!--------------------------->
 
