--- a/site/mitmachen.html
+++ b/site/mitmachen.html
@@ -27,6 +27,8 @@
             <h1 class="Titel">
             Mitmachen
             </h1>
+
+            <p>[hier ziele eintragen für später]</p>
         </div>
     </body>
 
