fixes on home and added specific css styles for each html page also generalized some features

--- a/site/home.html
+++ b/site/home.html
@@ -8,7 +8,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
     </head>
     
     <header>
@@ -42,7 +44,7 @@
 
             <h2 class="subtitel">Wir machen Politik - und du kannst das auch!</h2>
 
-            <button class="discord_join_btn" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
+            <button class="btn" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
                 Discord beitreten
             </button>
 
