--- a/site/mitmachen.html
+++ b/site/mitmachen.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="other_style.css">
+        <link rel="stylesheet" href="mitmachen.css">
         <script src="script.js"></script>
     </head>
     <header>
@@ -29,22 +29,8 @@
             Mitmachen
             </h1>
 
-            <p>[hier ziele eintragen für später]</p>
+            <p class="font_rockwell_nova">[under construction]</p>
         </div>
     </body>
 
-    <footer>
-        <div id="footer_box" class="footer_box">
-            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#444053" fill-opacity="1" d="M0,288L80,272C160,256,320,224,480,213.3C640,203,800,213,960,208C1120,203,1280,181,1360,170.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-           
-        </div>
-        <div class="footer_text">
-            <a class="footer_links" href="home.html">Home</a>
-
-            <a class="footer_links" href="datenschutz.html">Datenschutz</a>
-
-            <a class="footer_links" href="impressum.html">Impressum</a>
-
-        </div>
-    </footer>
 </html>
