--- a/site/datenschutz.html
+++ b/site/datenschutz.html
@@ -8,9 +8,15 @@
       <!--  <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="datenschutz_style.css"
         <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
     </head>
 
+  <body>
+    <h1 class="font_rockwell_nova">Es werden momentan keine Daten erhoben.</h1>
 
+    <button class="btn" onclick="window.location.href='home.html';">Zurück</button>
+  </body>
 
 </html> 
