--- a/site/kontakt.html
+++ b/site/kontakt.html
@@ -7,9 +7,10 @@
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
+        <link rel="stylesheet" href="kontakt_style.css">
         <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="other_style.css">
         <script src="script.js"></script>
+        <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
     </head>
     <header>
         <div id="navbar" class="navbar">
@@ -30,33 +31,22 @@
             <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#ffff" fill-opacity="1" d="M0,224L80,208C160,192,320,160,480,160C640,160,800,192,960,176C1120,160,1280,96,1360,64L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
         </div>
         <div id="whitrect" class="whitrect">
-            <div id="discordicon" class="discordicon">
-                <svg id="Discord-Logo-Color" xmlns="http://www.w3.org/2000/svg" width="45.814" height="52.359" viewbox="0 0 45.814 52.359">
-                    <path id="Pfad_522" data-name="Pfad 522" d="M96.87,103.9a2.916,2.916,0,1,0,2.67,2.906A2.789,2.789,0,0,0,96.87,103.9Zm9.556,0a2.916,2.916,0,1,0,2.67,2.906A2.789,2.789,0,0,0,106.426,103.9Z" transform="translate(-78.702 -81.935)" fill="#7289da"/>
-                    <path id="Pfad_523" data-name="Pfad 523" d="M75.448,20H40.367A5.38,5.38,0,0,0,35,25.393V60.788a5.38,5.38,0,0,0,5.367,5.393H70.055l-1.388-4.843,3.351,3.115,3.168,2.932,5.629,4.974V25.393A5.38,5.38,0,0,0,75.448,20ZM65.342,54.191s-.942-1.126-1.728-2.121a8.261,8.261,0,0,0,4.739-3.115A14.981,14.981,0,0,1,65.342,50.5a17.231,17.231,0,0,1-3.8,1.126,18.339,18.339,0,0,1-6.781-.026,21.977,21.977,0,0,1-3.848-1.126,15.344,15.344,0,0,1-1.911-.89c-.079-.052-.157-.079-.236-.131a.361.361,0,0,1-.1-.079c-.471-.262-.733-.445-.733-.445a8.142,8.142,0,0,0,4.581,3.089c-.785.995-1.754,2.173-1.754,2.173-5.786-.183-7.985-3.979-7.985-3.979a35.059,35.059,0,0,1,3.77-15.263A12.946,12.946,0,0,1,53.9,32.2l.262.314a17.662,17.662,0,0,0-6.885,3.43s.576-.314,1.545-.759a19.66,19.66,0,0,1,5.943-1.649,2.58,2.58,0,0,1,.445-.052A22.151,22.151,0,0,1,60.5,33.43a21.341,21.341,0,0,1,7.88,2.513,17.423,17.423,0,0,0-6.519-3.325l.367-.419a12.946,12.946,0,0,1,7.356,2.749,35.059,35.059,0,0,1,3.77,15.263S71.128,54.007,65.342,54.191Z" transform="translate(-35 -20)" fill="#7289da"/>
-                 </svg>
+            <div class="contact_info">
+                <span class="mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';">
+                    <i class="fab fa-discord kontakt_icon"></i>
+                    <p class="contactlinks font_rockwell_nova">discord.gg/UVQdK45</p>
+                </span>
+                <span class="mouse_pointer" onclick="window.location.href='https://www.google.com';">
+                    <i class="fab fa-instagram-square kontakt_icon"></i>
+                    <p class="contactlinks font_rockwell_nova">Jugendbeirat_Neustadt</p>
+                </span>
+                <span class="mouse_pointer" onclick="window.location.href='mailto:jugendinitiative.bremen@gmx.de';">
+                    <i class="fas fa-envelope kontakt_icon"></i>
+                    <p class="contactlinks font_rockwell_nova">jugendinitiative.bremen@gmx.de</p>
+                </span>
+            </div>
         </div>
-        <p class="contactlinks">discord.gg/UVQdK45</p>
-        <div id="instagramicon" class="instagramicons"></div>
-        <p class="contactlinks">Jugendbeirat_Neustadt</p>
-        <div id="emailicon" class="emailicon"></div>
-        <p class="contactlinks">jugendinitiative.bremen@gmx.de</p>
-        </div>
-            
     </body>
 
-    <footer>
-        <div id="footer_box" class="footer_box">
-            <svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1440 320"><path fill="#444053" fill-opacity="1" d="M0,288L80,272C160,256,320,224,480,213.3C640,203,800,213,960,208C1120,203,1280,181,1360,170.7L1440,160L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z"></path></svg>
-           
-        </div>
-        <div class="footer_text">
-            <a class="footer_links" href="home.html">Home</a>
 
-            <a class="footer_links" href="datenschutz.html">Datenschutz</a>
-
-            <a class="footer_links" href="impressum.html">Impressum</a>
-
-        </div>
-    </footer>
 </html>
