renamed "home" to "index"

--- a/impressum.html
+++ b/impressum.html
@@ -14,7 +14,7 @@
 <header>
     <header>
         <div id="back_arrow" class="back_arrow">
-            <a href="home.html">
+            <a href="index.html">
             <svg xmlns="http://www.w3.org/2000/svg" width="34.884" height="56.416" viewbox="0 0 34.884 56.416"><path id="chevron-down_rotated" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(47.754 -9) rotate(90)" fill="#6c63ff"/></svg>
         </a>
         </div>
