--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
     </head>
     <header>
         <div id="navbar" class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a href="mitmachen.html">Mitmachen</a>
             <a class="active" href="kontakt.html">Kontakt</a>
         </div>
