--- a/datenschutz.html
+++ b/datenschutz.html
@@ -14,7 +14,7 @@
     </head>
 
     <h1 class="font_rockwell_nova">Es werden momentan keine Daten erhoben.</h1>
-    <button class="btn" onclick="window.location.href='home.html';">Zurück</button>
+    <button class="btn" onclick="window.location.href='index.html';">Zurück</button>
 
 
 </html>
