--- a/mitmachen.html
+++ b/mitmachen.html
@@ -13,7 +13,7 @@
     </head>
     <header>
         <div id="navbar" class="navbar">
-            <a href="home.html">Home</a>
+            <a href="index.html">Home</a>
             <a class="active" href="#mitmachen">Mitmachen</a>
             <a href="kontakt.html">Kontakt</a>
         </div>
