--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div id="page3" class="page">
             <img class="icon page2_icon" src="artwork/actual_join_icon.png" alt="actualjoin_icon">
             <h2 class="Topic_header">Was wir wollen</h2>
-            <p class="Topic_text">Wir wollen eine Möglichkeit zum Mitreden und Einluss darauf nehmen, was in der Neustadt passiert!  </p>   
+            <p class="Topic_text">Wir wollen eine Möglichkeit zum Mitreden und Einfluss darauf nehmen, was in der Neustadt passiert!  </p>   
             <span id="scroll_arrow_home_3" class="scroll_arrow_home_3 arrow"> 
                 <a href="#page4">
                     <svg xmlns="http://www.w3.org/2000/svg" width="56.416" height="34.884" viewbox="0 0 56.416 34.884"> <path id="chevron-down1" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
