--- a/impressum.html
+++ b/impressum.html
@@ -32,10 +32,7 @@
     <div class="Impressum_text"> 
 
 <p class="Topic_text">
-    Hallo, ich bin ein Impressum.<br>
-    Das hier ist, rechtlich gesehen, wichtig.<br>
-    Ich sehe das aber anders.<br>
-    Deswegen ist das hier leer.<br>
+    Impressum ist noch in Arbeit.<br>
 </p>
 </div>
 
