--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <!--------------------------->
 
 <!-- Weiße Fläche -->
-        <div id="index_rectangle" class="index_rectangle"><svg xmlns="http://www.w3.org/2000/svg" width="1920" height="3392.787" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
+        <div id="index_rectangle" class="index_rectangle"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
 
 <!--- arrow-->
             <span id="scroll_arrow_home_1" class="scroll_arrow_home_1 arrow"> 
@@ -111,7 +111,7 @@
 
 </section>
 
-<!--------------------------->
+<!------------
     <footer>
         <div class="footer_text">
             <a class="footer_links links" href="home.html">Home</a>
@@ -120,6 +120,6 @@
         </div>
         <svg class="footer_box_svg" xmlns="http://www.w3.org/2000/svg" width="100%" height="288" viewbox="0 0 1920 288"><path id="footerbox" d="M5900,4289.762s-340.72,25.033-680.316,54.777c-320.347,28.058-461.922,51.848-771.843,56.524S3980,4363.243,3980,4363.243l-.016,214.456L5900,4578.08Z" transform="translate(-3979.984 -4289.762)" fill="#444053"/></svg>
     </footer>
-
+--------------->
 </body>
 </html>
