arrow change and titleheader improvements

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 
 <!--- arrow-->
         <span id="scroll_arrow_home_1" class="scroll_arrow_home_1 arrow"> 
-            <a href="#page2">
-                <svg xmlns="http://www.w3.org/2000/svg" width="3.761vw" height="2.3256vw" viewbox="0 0 56.416 34.884"> <path id="chevron-down2" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
+            <a href="#page3">
+                <svg xmlns="http://www.w3.org/2000/svg" width="9.761vw" height="7.3256vh" viewbox="0 0 56.416 34.884"> <path id="chevron-down2" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
             </a>
         </span>
 <!--------------------------->
@@ -72,7 +72,7 @@
         <div id="page2" class="page">
            <img class="icon page2_icon" src="artwork/teamwork_icon.png" alt="teamwork_icon">
             <h2 class="Topic_header">Wer wir sind</h2>
-            <p class="Topic_text">Junge Menschen aus der Neustadt und Umzu, die sich für Lokalpolitik interessieren.</p>   
+            <p class="Topic_text page_about">Junge Menschen aus der Neustadt und Umzu, die sich für Lokalpolitik interessieren.</p>   
 
         </div>
 <!--------------------------->
