updated "kontakt" for responsive design, tablets still not working tho

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html >
 <html lang="de">
     <head>
+
+        <!-- Allgemein -->
+
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>JBN [PT 0.6.3]</title>
@@ -13,6 +16,9 @@
         <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>
+
+        <!-- Size-Spezifisch -->
         <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>
     </head>
     
