added preview for general meta tags

--- a/kontakt.html
+++ b/kontakt.html
@@ -5,13 +5,17 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        
-
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>JBN [PT 0.6.3]</title>
+        <meta name="Jugendbeirat Neustadt" content="">
+        <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="theme-color" content="#6C63FF"/>
         <link rel="stylesheet" href="https://use.typekit.net/ofj3rzd.css">
         <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>t src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
 
         <!-- Size-Spezifisch -->
         <link rel="stylesheet" href="kontakt_style.css">
