--- a/kontakt.html
+++ b/kontakt.html
@@ -15,8 +15,8 @@
         <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
-        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>t src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
-
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>
+        
         <!-- Size-Spezifisch -->
         <link rel="stylesheet" href="kontakt_style.css">
         <link href="contact-form.css" rel="stylesheet">
