forgot to switch top height, added viewport height tag

--- a/kontakt.html
+++ b/kontakt.html
@@ -47,7 +47,7 @@
         <!-- Weiße Fläche -->
         <div id="index_rectangle" class="contact_rectangle"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
 
-        <section id="content">
+        <section id="content" class="content">
 
             <div class="contact-form-body">
                 <div id="contact-form-main">
