added lang for kontakt.html; removed non-legible text; added canonical reference correctly

--- a/kontakt.html
+++ b/kontakt.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="de">
     <head>
         <!-- Allgemein -->
 
@@ -15,13 +15,13 @@
         <link rel="stylesheet" href="footer_style.css">
         <script src="script.js"></script>
         <script src="https://kit.fontawesome.com/d4164139c2.js" crossorigin="anonymous"></script>
-        <link rel="canonical" href="https://jugendbeiratneustadt.de/"/>
 
         <!-- Size-Spezifisch -->
         <link rel="stylesheet" href="kontakt_style.css">
         <link href="contact-form.css" rel="stylesheet">
         <meta name="Kontakt" content="">
         <title>Kontakt</title>
+        <link rel="canonical" href="https://jugendbeiratneustadt.de/kontakt.html"/>
     </head>
 
     <header>
