added footer; broke viewport wdth

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.6.6]</title>
+        <title>JBN [PT 0.7]</title>p
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,9 +34,10 @@
             <div class="bar3"></div>
         </div>
     </header>
-
-    
     <body>
+
+
+
 
 <!--- Page 1 -->
         <div class="picture">
@@ -63,18 +64,12 @@
 <!-- Weiße Fläche -->
         <div id="index_rectangle" class="index_rectangle"><svg xmlns="http://www.w3.org/2000/svg" viewbox="0 0 1920 3392.787"><path id="white" d="M5900,1179.24s-680.326,21.791-948.911,39.528S3980,1275.932,3980,1275.932v3296.1H5900Z" transform="translate(-3980 -1179.24)" fill="#fff"/></svg></div>
 
-<!--- arrow-->
-        <span id="scroll_arrow_home_1" class="scroll_arrow_home_1 arrow"> 
-            <a href="#page3">
-                <svg xmlns="http://www.w3.org/2000/svg" width="9.761vw" height="7.3256vh" viewbox="0 0 56.416 34.884"> <path id="chevron-down2" d="M15.629,12.87,37.208,34.449,58.787,12.87l6.629,6.676L37.208,47.754,9,19.546Z" transform="translate(-9 -12.87)" fill="#6c63ff"/> </svg>
-            </a>
-        </span>
-<!--------------------------->
 
 <!--- Pages section -->
 
 <section id="pages_section">
 
+    <div class="pages_content">
 <!--- Page 2-->
         <div id="page2" class="page">
            <img class="icon page2_icon" src="artwork/teamwork_icon.png" alt="teamwork_icon">
@@ -119,6 +114,29 @@
             <p class="Topic_text">Du bist unter 25 und hast Interesse an Lokalpolitik? Dann mach mit und verbessere die Neustadt!</p>
         </div>
 <!--------------------------->
+    </div>
+    <footer class="footer">
+        <div class="inner_footer">
+            <div class="logo_container">
+                <img src="icons/logo.png" style="width:100px;height: auto;">
+            </div>
+            <div class="footer_third">
+                <h1>Rechtliches</h1>
+                <a href="#">Impressum</a>
+                <a href="#">Datenschutz</a>
+            </div>
+            <div class="footer_third">
+                <h1>Sitemap</h1>
+                <a href="#">Home</a>
+                <a href="#">Kontakt</a>
+            </div>
+            <div class="footer_third">
+                <h1>Social Media</h1>
+                <li><a href="#"></a><i class="fab fa-instagram-square"></i></li>
+                <li><a href="#"></a><i class="fab fa-discord"></i></li>
+            </div>
+        </div>
+    </footer>
 
 </section>
 
