footer rework; mostly done

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.7]</title>p
+        <title>JBN [PT 0.9]</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -34,10 +34,8 @@
             <div class="bar3"></div>
         </div>
     </header>
+
     <body>
-
-
-
 
 <!--- Page 1 -->
         <div class="picture">
@@ -72,7 +70,7 @@
     <div class="pages_content">
 <!--- Page 2-->
         <div id="page2" class="page">
-           <img class="icon page2_icon" src="artwork/teamwork_icon.png" alt="teamwork_icon">
+           <img class="icon page2_icon" src="artwork/teamwork_icon.png" alt="teamwork_icon" style="width: 30vw;height:auto;">
             <h2 class="Topic_header">Wer wir sind</h2>
             <p class="Topic_text page_about">Junge Menschen aus der Neustadt und Umzu, die sich für Lokalpolitik interessieren.</p>   
 
@@ -91,7 +89,7 @@
 
 <!--- Page 3-->
         <div id="page3" class="page">
-            <img class="icon page2_icon" src="artwork/actual_join_icon.png" alt="actualjoin_icon">
+            <img class="icon page2_icon" src="artwork/actual_join_icon.png" alt="actualjoin_icon" style="width: 30vw;height:auto;">
             
             <h2 class="Topic_header">Was wir wollen</h2>
             
@@ -109,7 +107,7 @@
 
 <!--- Page 4 -->
         <div id="page4" class="page">
-            <img class="icon page2_icon" src="artwork/join_icon.png" alt="join_icon">
+            <img class="icon page2_icon" src="artwork/join_icon.png" alt="join_icon" style="width: 30vw;height:auto;">
             <h2 class="Topic_header">Mach mit</h2>
             <p class="Topic_text">Du bist unter 25 und hast Interesse an Lokalpolitik? Dann mach mit und verbessere die Neustadt!</p>
         </div>
@@ -118,22 +116,22 @@
     <footer class="footer">
         <div class="inner_footer">
             <div class="logo_container">
-                <img src="icons/logo.png" style="width:100px;height: auto;">
+                <img src="icons/logo-2.png" class="logo_footer" style="width:100px;height:auto;">
             </div>
             <div class="footer_third">
                 <h1>Rechtliches</h1>
-                <a href="#">Impressum</a>
-                <a href="#">Datenschutz</a>
+                <a href="impressum.html">Impressum</a>
+                <a href="datenschutz.html">Datenschutz</a>
             </div>
             <div class="footer_third">
                 <h1>Sitemap</h1>
-                <a href="#">Home</a>
-                <a href="#">Kontakt</a>
+                <a href="index.html">Home</a>
+                <a href="kontakt.html">Kontakt</a>
             </div>
             <div class="footer_third">
                 <h1>Social Media</h1>
-                <li><a href="#"></a><i class="fab fa-instagram-square"></i></li>
-                <li><a href="#"></a><i class="fab fa-discord"></i></li>
+                <li > <i class="fab fa-instagram-square mouse_pointer" onclick="window.location.href='https://www.instagram.com/jugendbeirat_neustadt/';"></i></li>
+                <li> <i class="fab fa-discord  mouse_pointer" onclick="window.location.href='https://www.discord.gg/UVQdK45';"></i></li>
             </div>
         </div>
     </footer>
