--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.9.1]</title>
+        <title>JBN [PT 0.9.4]</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -24,8 +24,8 @@
     
     <header>
             <div id="navbar" class="navbar">
-                <a class="active" href="#home">Home</a>
-                <a href="kontakt.html">Kontakt</a>
+                <span class="active mouse_pointer" href="#home">Home</span>
+                <span class="mouse_pointer" onclick="window.location.href='kontakt.html'">Kontakt</span>
             </div>
 
         <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();" >
@@ -116,7 +116,7 @@
     <footer class="footer">
         <div class="inner_footer">
             <div class="logo_container">
-                <img src="icons/logo-2.png" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
+                <img src="/images/logo.png" class="logo_footer" alt="Logo" style="width:100px;height:auto;">
             </div>
             <div class="footer_third">
                 <h1>Rechtliches</h1>
