--- a/kontakt.html
+++ b/kontakt.html
@@ -5,7 +5,7 @@
 
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>JBN [PT 0.9.1]</title>
+        <title>JBN [PT 0.9.4]</title>
         <meta name="Jugendbeirat Neustadt" content="">
         <meta name="Description" content="Die Website des (bald kommenden) Jugendbeirats der Bremer Neustadt.">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -26,15 +26,16 @@
 
     <header>
         <div id="navbar" class="navbar">
-            <a href="index.html">Home</a>
-            <a class="active" href="kontakt.html">Kontakt</a>
+            <span class="mouse_pointer" onclick="window.location.href='index.html'">Home</span>
+            <span class="active mouse_pointer" onclick="window.location.href='kontakt.html'">Kontakt</span>
         </div>
-        <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-        </div>
-    </header>
+
+    <div class="menu_icon" onclick="buttonTransitionFunction(this);toggleNavBar();" >
+        <div class="bar1"></div>
+        <div class="bar2"></div>
+        <div class="bar3"></div>
+    </div>
+</header>
 
 
     <body>
